Various styling improvements

--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -153,7 +153,6 @@ permalink: /ecommerce-websites/
         <div class="hero center">
             <div class="container-1140">
                 <h1>E-commerce Websites</h1>
-                <h2>Selling your products or services online</h2>
             </div>
         </div>
         <div class="main section">
@@ -230,7 +229,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>Wan&Co</h2>
-                            <h3 style="font-size: 18px;">A clothing brand with a big ambition to reduce waste</h3>
+                            <p><strong>A clothing brand with a big ambition to reduce waste</strong></p>
                             <ul>
                                 <li>Website development</li>
                                 <li>Facebook Shop and Instagram Shop connection</li>
@@ -248,7 +247,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>Crazy Thumbs</h2>
-                            <h3 style="font-size: 18px;">Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</h3>
+                            <p><strong>Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</strong></p>
                             <ul>
                                 <li>Shopify store development</li>
                                 <li>Advanced navigation system</li>
@@ -272,7 +271,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>Kiko by Astons of London</h2>
-                            <h3 style="font-size: 18px;">Personalised Gifts for Dogs</h3>
+                            <p><strong>Personalised Gifts for Dogs</strong></p>
                             <ul>
                                 <li>Website design</li>
                                 <li>WooCommerce setup</li>
@@ -294,7 +293,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>CNT Associates</h2>
-                            <h3 style="font-size: 18px;">Business support and fundraising</h3>
+                            <p><strong>Business support and fundraising</strong></p>
                             <ul>
                                 <li>Website development</li>
                                 <li>WooCommerce setup</li>
@@ -318,7 +317,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>Meitam London</h2>
-                            <h3 style="font-size: 18px;">One-off unique handcrafted pieces made from African natural materials</h3>
+                            <p><strong>One-off unique handcrafted pieces made from African natural materials</strong></p>
                             <ul>
                                 <li>Product management</li>
                                 <li>Photo editing in Adobe Photoshop</li>
@@ -341,7 +340,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>Wardell's Wardrobe</h2>
-                            <h3 style="font-size: 18px;">Stockist of The Bamboo Wardrobe and lots more for both ladies and gentlemen</h3>
+                            <p><strong>Stockist of The Bamboo Wardrobe and lots more for both ladies and gentlemen</strong></p>
                             <ul>
                                 <li>Colour swatches</li>
                                 <li>Out of stock email notifications</li>
@@ -363,7 +362,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>The Bamboo Wardrobe</h2>
-                            <h3 style="font-size: 18px;">Wholesale women's bamboo clothing</h3>
+                            <p><strong>Wholesale women's bamboo clothing</strong></p>
                             <ul>
                                 <li>Shopify store development</li>
                                 <li>Product management</li>
@@ -382,7 +381,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>Esme Learning Solutions</h2>
-                            <h3 style="font-size: 18px;">Professional development courses from top-tier universities powered by next-gen AI learning</h3>
+                            <p><strong>Professional development courses from top-tier universities powered by next-gen AI learning</strong></p>
                             <ul>
                                 <li>Website maintenance</li>
                                 <li>Product management</li>
@@ -403,7 +402,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>KYOSK</h2>
-                            <h3 style="font-size: 18px;">Antibacterial phone booths for open space areas</h3>
+                            <p><strong>Antibacterial phone booths for open space areas</strong></p>
                             <ul>
                                 <li>Website development</li>
                                 <li>Theme customisations</li>
@@ -415,7 +414,7 @@ permalink: /ecommerce-websites/
                     </div>
                 </div>
 
-                <p>Are you a business owner in <strong>Bexley</strong> or the surrounding areas looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact/">Contact us</a> today.</p>
+                <p>Are you a small business owner looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact/">Contact us</a> today.</p>
             </div>
         </div>
         <div class="contact section">
