--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -153,7 +153,6 @@ permalink: /small-business-web-design/
         <div class="hero center">
             <div class="container-1140">
                 <h1>Small Business Web Design</h1>
-                <h2>A Fully-Customised Design for Your Website</h2>
             </div>
         </div>
         <div class="main section">
@@ -204,7 +203,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>Fortis DPC</h2>
-                            <h3 style="font-size: 18px;">Delivering complete cyber security and data protection compliance solutions</h3>
+                            <p><strong>Delivering complete cyber security and data protection compliance solutions</strong></p>
                             <p>We redesigned Fortis DPC's website to give it a brand new look which upholds the company's values of strength, security and trust. Services provided:</p>
                             <ul>
                                 <li>Website redesign</li>
@@ -227,7 +226,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>TechWomen4Boards</h2>
-                            <h3 style="font-size: 18px;">Helping women to achieve boardroom excellence through training, mentoring and networking</h3>
+                            <p><strong>Helping women to achieve boardroom excellence through training, mentoring and networking</strong></p>
                             <ul>
                                 <li>Website design</li>
                                 <li>Google Search Console submission</li>
@@ -248,7 +247,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>Bexley Linkup</h2>
-                            <h3 style="font-size: 18px;">Connecting businesses for success</h3>
+                            <p><strong>Connecting businesses for success</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                                 <li>Google Analytics setup</li>
@@ -269,7 +268,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>New Haw Community Centre</h2>
-                            <h3 style="font-size: 18px;">At the Centre of Our Community</h3>
+                            <p><strong>At the Centre of Our Community</strong></p>
                             <ul>
                                 <li>Website redesign</li>
                                 <li>Google Search Console submission</li>
@@ -289,7 +288,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>Kiko by Astons of London</h2>
-                            <h3 style="font-size: 18px;">Personalised Gifts for Dogs</h3>
+                            <p><strong>Personalised Gifts for Dogs</strong></p>
                             <ul>
                                 <li>Website design</li>
                                 <li>WooCommerce setup</li>
@@ -311,7 +310,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>Emrys Technology &amp; Consultancy</h2>
-                            <h3 style="font-size: 18px;">Global consultancy specialising in Information Technologies, Cyber Security, Data/AI management and Agile Working</h3>
+                            <p><strong>Global consultancy specialising in Information Technologies, Cyber Security, Data/AI management and Agile Working</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                                 <li>Google Analytics setup</li>
@@ -332,7 +331,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>LCG Lift Consultancy</h2>
-                            <h3 style="font-size: 18px;">London lift consultants</h3>
+                            <p><strong>London lift consultants</strong></p>
                             <ul>
                                 <li>Website redesign and development</li>
                                 <li>Google Analytics setup</li>
@@ -350,7 +349,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>LD Tiling Contractors</h2>
-                            <h3 style="font-size: 18px;">Offering a range of tiling services throughout South East London</h3>
+                            <p><strong>Offering a range of tiling services throughout South East London</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                             </ul>
@@ -369,7 +368,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>NeroWireArt</h2>
-                            <h3 style="font-size: 18px;">Handcrafted bonsai wire trees to enhance your home décor</h3>
+                            <p><strong>Handcrafted bonsai wire trees to enhance your home décor</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                                 <li>Dynamic pages</li>
@@ -391,7 +390,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>Happily Clappily Ever Laughter</h2>
-                            <h3 style="font-size: 18px;">Discover the benefits of laughter!</h3>
+                            <p><strong>Discover the benefits of laughter!</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                                 <li>Google Analytics setup</li>
@@ -412,7 +411,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>Encalife</h2>
-                            <h3 style="font-size: 18px;">Experience the unusual, every day</h3>
+                            <p><strong>Experience the unusual, every day</strong></p>
                             <ul>
                                 <li>Homepage and collection page design in GemPages</li>
                             </ul>
@@ -431,7 +430,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>SwipSearch</h2>
-                            <h3 style="font-size: 18px;">Swipe right to get hired</h3>
+                            <p><strong>Swipe right to get hired</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                                 <li>Landing page design</li>
@@ -451,7 +450,7 @@ permalink: /small-business-web-design/
                         </div>
                         <div class="col-7">
                             <h2>Global Banking School</h2>
-                            <h3 style="font-size: 18px;">Flexible study that fits around you</h3>
+                            <p><strong>Flexible study that fits around you</strong></p>
                             <ul>
                                 <li>Landing page design in Unbounce</li>
                             </ul>
