--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -202,7 +202,7 @@ permalink: /web-design-surrey/
                         </div>
                         <div class="col-7">
                             <h2>Fortis DPC</h2>
-                            <h3 style="font-size: 18px;">Delivering complete cyber security and data protection compliance solutions</h3>
+                            <p><strong>Delivering complete cyber security and data protection compliance solutions</strong></p>
                             <p>We redesigned Fortis DPC's website with a brand new look and feel which upholds the company's values of strength, security and trust. We also set up the e-commerce functionality to showcase the new range of digital services being offered. Services provided:</p>
                             <ul>
                                 <li>Website redesign</li>
@@ -225,7 +225,7 @@ permalink: /web-design-surrey/
                         </div>
                         <div class="col-7">
                             <h2>New Haw Community Centre, Woodham</h2>
-                            <h3 style="font-size: 18px;">At the Centre of Our Community</h3>
+                            <p><strong>At the Centre of Our Community</strong></p>
                             <p>The Community Centre benefits from a fresh, modern design and an improved booking system. Services provided:</p>
                             <ul>
                                 <li>Website redesign</li>
@@ -248,7 +248,7 @@ permalink: /web-design-surrey/
                         </div>
                         <div class="col-7">
                             <h2>Crazy Thumbs</h2>
-                            <h3 style="font-size: 18px;">Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</h3>
+                            <p><strong>Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</strong></p>
                             <p>We helped Crazy Thumbs enjoy a seamless transition between operating via their physical store and the online experience. We recommended Shopify as the best choice for their e-commerce channel.</p>
                             <ul>
                                 <li>Shopify store development</li>
@@ -273,7 +273,7 @@ permalink: /web-design-surrey/
                         </div>
                         <div class="col-7">
                             <h2>The GDPR Compliance Consultancy</h2>
-                            <h3 style="font-size: 18px;">Compliance, Delivered</h3>
+                            <p><strong>Compliance, Delivered</strong></p>
                             <p>The GDPR Compliance Consultancy required a website refresh and error fixing to improve SEO and increase traffic to the website. Services provided:</p>
                             <ul>
                                 <li>Website refresh</li>
