--- a/website-design.html
+++ b/website-design.html
@@ -154,7 +154,7 @@ permalink: /website-design/
             <div class="container-1140">
                 <h1>Web Design for Bexley Small Businesses</h1>
                 <h2>Access free business support and subsidised web design services if your small business is based in the London Borough of Bexley.</h2>
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScd4ShuAr0QU5nx8gdUferjS52L_U1FSwSPeopouOFqxlXI8Q/viewform" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+                <div class="padding-top"><a class="btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScd4ShuAr0QU5nx8gdUferjS52L_U1FSwSPeopouOFqxlXI8Q/viewform" target="_blank" rel="noopener noreferrer">Register Now</a></div>
             </div>
         </div>
         <div class="main section">
@@ -226,7 +226,7 @@ permalink: /website-design/
                 </div>
 
                 <div class="partners section center padding-top padding-bottom grey">
-                    <h3>Talking Business will be running for a limited time only. To secure your place, start your application today by clicking Register Now.</p>
+                    <p><strong>Talking Business will be running for a limited time only. To secure your place, start your application today by clicking Register Now.</strong></p>
                     <div class="padding-top padding-bottom"><a class="btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScd4ShuAr0QU5nx8gdUferjS52L_U1FSwSPeopouOFqxlXI8Q/viewform" target="_blank" rel="noopener noreferrer">Register Now</a></div>
                 </div>
 
@@ -243,7 +243,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>Bexley Linkup</h2>
-                            <h3 style="font-size: 18px;">Connecting businesses for success</h3>
+                            <p><strong>Connecting businesses for success</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                                 <li>Google Analytics setup</li>
@@ -264,7 +264,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>LCG Lift Consultancy</h2>
-                            <h3 style="font-size: 18px;">London lift consultants</h3>
+                            <p><strong>London lift consultants</strong></p>
                             <ul>
                                 <li>Website redesign and development</li>
                                 <li>Google Analytics setup</li>
@@ -282,7 +282,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>LD Tiling Contractors</h2>
-                            <h3 style="font-size: 18px;">Offering a range of tiling services throughout South East London</h3>
+                            <p><strong>Offering a range of tiling services throughout South East London</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                             </ul>
@@ -301,7 +301,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>Happily Clappily Ever Laughter</h2>
-                            <h3 style="font-size: 18px;">Discover the benefits of laughter!</h3>
+                            <p><strong>Discover the benefits of laughter!</strong></p>
                             <ul>
                                 <li>Website design and development</li>
                                 <li>Google Analytics setup</li>
@@ -322,7 +322,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>Pathways 21</h2>
-                            <h3 style="font-size: 18px;">A total solution for business development, fundraising, digital services and SME support</h3>
+                            <p><strong>A total solution for business development, fundraising, digital services and SME support</strong></p>
                             <ul>
                                 <li>Website development</li>
                                 <li>Google Analytics setup</li>
@@ -343,7 +343,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>CNT Associates</h2>
-                            <h3 style="font-size: 18px;">Business support and fundraising</h3>
+                            <p><strong>Business support and fundraising</strong></p>
                             <ul>
                                 <li>Website development</li>
                                 <li>WooCommerce setup</li>
@@ -367,7 +367,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>Blue Horizon LNW</h2>
-                            <h3 style="font-size: 18px;">New sounds for a new decade</h3>
+                            <p><strong>New sounds for a new decade</strong></p>
                             <ul>
                                 <li>Website development</li>
                                 <li>Custom domain setup</li>
@@ -389,7 +389,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>Future Communities UK</h2>
-                            <h3 style="font-size: 18px;">Community engagement, training, consultancy and partnership work</h3>
+                            <p><strong>Community engagement, training, consultancy and partnership work</strong></p>
                             <ul>
                                 <li>Website development</li>
                                 <li>Members-only area for online resources</li>
@@ -413,7 +413,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>Wardell's Wardrobe</h2>
-                            <h3 style="font-size: 18px;">Stockist of The Bamboo Wardrobe and lots more for both ladies and gentlemen</h3>
+                            <p><strong>Stockist of The Bamboo Wardrobe and lots more for both ladies and gentlemen</strong></p>
                             <ul>
                                 <li>Colour swatches</li>
                                 <li>Out of stock email notifications</li>
@@ -435,7 +435,7 @@ permalink: /website-design/
                         </div>
                         <div class="col-7">
                             <h2>The Bamboo Wardrobe</h2>
-                            <h3 style="font-size: 18px;">Wholesale women's bamboo clothing</h3>
+                            <p><strong>Wholesale women's bamboo clothing</strong></p>
                             <ul>
                                 <li>Shopify store development</li>
                                 <li>Product management</li>
