--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -153,7 +153,6 @@ permalink: /website-maintenance/
         <div class="hero center">
             <div class="container-1140">
                 <h1>Website Maintenance Services in London</h1>
-                <h2>For when you need ongoing support</h2>
             </div>
         </div>
         <div class="main section">
@@ -243,7 +242,7 @@ permalink: /website-maintenance/
                     </div>
                     <div class="col-7">
                         <h2>The GDPR Compliance Consultancy</h2>
-                        <h3 style="font-size: 18px;">Compliance, Delivered</h3>
+                        <p><strong>Compliance, Delivered</strong></p>
                         <ul>
                             <li>Blog post upload</li>
                             <li>Theme refresh</li>
@@ -264,7 +263,7 @@ permalink: /website-maintenance/
                     </div>
                     <div class="col-7">
                         <h2>Meitam London</h2>
-                        <h3 style="font-size: 18px;">One-off unique handcrafted pieces made from African natural materials</h3>
+                        <p><strong>One-off unique handcrafted pieces made from African natural materials</strong></p>
                         <ul>
                             <li>Product management</li>
                             <li>Photo editing in Adobe Photoshop</li>
@@ -286,7 +285,7 @@ permalink: /website-maintenance/
                     </div>
                     <div class="col-7">
                         <h2>Tizane</h2>
-                        <h3 style="font-size: 18px;">News, events, dates and releases from the quirky South East London-based singer/songwriter</h3>
+                        <p><strong>News, events, dates and releases from the quirky South East London-based singer/songwriter</strong></p>
                         <ul>
                             <li>Design improvements</li>
                             <li>Mailchimp integration</li>
